[project]
name = "nlp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "spacy>=3.7.0",
    "pydantic>=2.7.0",
    "googletrans",
    "en-core-web-sm",
    "en-core-web-trf",
    "nltk>=3.9.2",
    "google-genai>=1.45.0",
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }
en-core-web-trf = { path = "en_core_web_trf-3.8.0.tar.gz" }
